@@ -1070,6 +1070,7 @@ about.text=jEdit is brought to you by\n\
 	Chris Kent\n\
 	Chris Petersen\n\
 	Chris Scott\n\
+	Chris Sullins\n\
 	Christoph Daniel Schulze\n\
 	Claude Eisenhut\n\
 	Cullen Linn\n\
@@ -1107,6 +1108,7 @@ about.text=jEdit is brought to you by\n\
 	Israel Olalla\n\
 	Jakub Rozto\u010Dil\n\
 	Jamie LaScolea\n\
+	Jarek Czekalski\n\
 	Jason Ginchereau\n\
 	Jean-Francois Larvoire\n\
 	Jeffrey Hoyt\n\
@@ -1210,6 +1212,7 @@ about.text=jEdit is brought to you by\n\
 	Stefan Kost\n\
 	Stefano Maestri\n\
 	Stephen Bartlett\n\
+	Stephen Blackheath\n\
 	Steve Jakob\n\
 	Stuart Barlow\n\
 	Tal Davidson\n\
